# ShieldProxy

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
config/: config.example.yaml  rules.example.yaml
src/: config.rs  error.rs  lib.rs  main.rs
src/dashboard/: routes.rs
src/observability/: metrics.rs  mod.rs
src/proxy/: handler.rs  load_balancer.rs  mod.rs
src/ratelimit/: mod.rs  store.rs
src/waf/: engine.rs  mod.rs  rules.rs
tests/: integration_test.rs  ratelimit_test.rs  waf_test.rs
