[package]
name = "shield-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Gabryx412-Coder"]
description = "High-performance Reverse Proxy with integrated WAF and Rate Limiting written in Rust."

[dependencies]
# ===== Core Async/Web Stack (Hyper V1 Compatible) =====
tokio = { version = "1.36", features = ["full"] }

# Axum v0.7.x usa Hyper V1
axum = { version = "0.7", features = ["http2", "macros"] }

# NECESSARIO: Aggiornare a 0.7 per la piena compatibilità con Axum 0.7/Hyper V1
axum-server = { version = "0.7", features = ["tls-rustls"] } 

# Requisiti di compatibilità Hyper V1 (lasciati espliciti per robustezza)
hyper-util = { version = "0.1", features = ["full", "http1", "http2"] } 
http-body-util = "0.1"
bytes = "1.6"

# Client per il forwarding
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false } 

# Layer per middleware Tower
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "compression-full", "cors"] }

# ===== Configurazione e Serializzazione =====
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = "0.9"
config = "0.14"

# ===== Observability (Logging & Metrics) =====
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# ===== WAF Logic =====
regex = "1.10"
arc-swap = "1.7"

# ===== Concorrenza e Utility =====
dashmap = "5.5"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
